--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -101,7 +101,7 @@
 
 \begin{table}[H]
   \centering
-  \caption{Eigenschaften der Silizium-CVD-Precursor}
+  \caption{Eigenschaften der Silizium-CVD-Precursormoleküle}
   \evenrowcolors
   \begin{tabularx}{\textwidth}{|XXR|}
     \hline
@@ -151,7 +151,7 @@
     \ce{O-H}-Bindungslänge in Wasser              & \SI{0.9575}{\angstrom} & \cite{haynes_crc_2011} S.9-24 \\
     Struktur von TMA $\left(\ce{Al(CH3)3}\right)$ & planar, triagonal      & \cite{haynes_crc_2011} S.9-46 \\
     \ce{Al-C}-Bindungslänge in TMA                & \SI{1.957}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
-    \ce{C-H}-Bindungslänge  in TMA                & \SI{1.113}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
+    \ce{C-H}-Bindungslänge in TMA                 & \SI{1.113}{\angstrom}  & \cite{haynes_crc_2011} S.9-46 \\
     \hline
   \end{tabularx}
 
