--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -33,7 +33,7 @@ Bei Relaxierung von amorphem Silizium nach den oben beschriebenen Methoden ist a
 Bereits nach \SI{4}{\angstrom} ist keine langreichweitige Ordnung erkennbar, doch ist die Bindungslänge bei \SI{2.339}{\angstrom} klar erkennbar.
 Damit liegt sie ca. \SI{3}{\percent} oberhalb ihrer kristallinen Bindungslänge.
 Weitere strukturelle Werte für alle untersuchten Parametrisierungen sind in Tabelle~\ref{tab:amorphoussilicon} zu finden.
-Der Newsome-Parametersatz generiert eine zusätzliche Spitze in der radialen Verteilungsfunktion vor der eigentlichen Bindungslänge, welche bei amorphen Systemen zu einer Unterschätzung der Bindungslänge und Koordinationszahl führt.
+Der Newsome-Parametersatz generiert eine zusätzliche Spitze in der radialen Verteilungsfunktion vor der eigentlichen Bindungslänge, welche bei amorphem Silizium zu einer Unterschätzung der Bindungslänge und Koordinationszahl führt.
 
 \begin{figure}[!ht]
   \centering
