--- a/contents.tex
+++ b/contents.tex
@@ -82,7 +82,7 @@ NVT       & \multicolumn{2}{l}{Bezeichnung für das Kanonische Ensemble}        
 Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
 \end{tabular}
 
-\begin{comment}
+\begin{comment}%commented out for a reason
   Liste der Abkürzungen, die nicht weiter erklärt werden:
   (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
 
@@ -111,7 +111,7 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   ACCELERATE
   MOSFETs
   XXR - latex table definition
-\end{comment}
+\end{comment}%commented out for a reason
 
 \chapter*{Symbolverzeichnis}
 \addcontentsline{toc}{chapter}{Symbolverzeichnis}
