--- a/literature.bib
+++ b/literature.bib
@@ -848,6 +848,24 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UHMNEMC9/Zhou and Wadley - 1998 - Atomistic simulations of the vapor deposition of N.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/RPIIPPVH/1.html:text/html}
 }
 
+@article{barshilia_characterization_2002,
+	title = {Characterization of Cu/Ni multilayer coatings by nanoindentation and atomic force microscopy},
+	volume = {155},
+	issn = {0257-8972},
+	url = {http://www.sciencedirect.com/science/article/pii/S0257897202000087},
+	doi = {10.1016/S0257-8972(02)00008-7},
+	abstract = {Cu/Ni multilayer coatings prepared by {RF}/{DC} magnetron sputtering process were characterized using x-ray diffraction ({XRD}), nanoindentation and atomic force microscopy ({AFM}) techniques. Films deposited under certain deposition conditions showed the appearance of satellite reflections around the principal reflections in the {XRD} data, indicating the formation of superlattice structure. Nanohardness measurements were performed on the films prepared under different deposition conditions, e.g. modulation wavelength (Λ), copper to nickel thickness ratio ({tCu}/{tNi}) and substrate temperature (Ts). Nanohardness data revealed that the hardness was enhanced by a factor of ∼2.5 times that of the rule-of-mixtures value. This enhancement in hardness occurred over a limited range of Λ. The results indicated that the hardness also depends on the copper to nickel thickness ratio and for {tCu}/{tNi}≃0.30 the films exhibited a maximum hardness. The hardness increased almost linearly with substrate temperature up to 200 °C and got saturated at 250 °C. No considerable change in the hardness was observed after vacuum annealing of the coatings. Imaging of the residual imprints by {AFM} revealed pile-up formation after indentation. The extent of pile-up, a measure of plastic flow of the material, was dependent on the preparation conditions of the multilayer coatings.},
+	number = {2–3},
+	urldate = {2014-10-16},
+	journal = {Surface and Coatings Technology},
+	author = {Barshilia, Harish C and Rajam, K. S},
+	month = jun,
+	year = {2002},
+	keywords = {Atomic force microscopy, Cu/Ni multilayer coatings, Magnetron sputtering, Mechanical properties, Nanohardness tester},
+	pages = {195--202},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/H6MTVJ9M/Barshilia and Rajam - 2002 - Characterization of CuNi multilayer coatings by n.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NKG7AP24/S0257897202000087.html:text/html}
+}
+
 @article{rao_atomistic_2000,
 	title = {Atomistic simulations of dislocation–interface interactions in the Cu-Ni multilayer system},
 	volume = {80},
@@ -863,6 +881,24 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	year = {2000},
 	pages = {2011--2040},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XR6GUBMK/Rao and Hazzledine - 2000 - Atomistic simulations of dislocation–interface int.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6CQRCZ5Z/01418610008212148.html:text/html}
+}
+
+@article{zhou_atomic_2001,
+	title = {Atomic scale structure of sputtered metal multilayers},
+	volume = {49},
+	issn = {1359-6454},
+	url = {http://www.sciencedirect.com/science/article/pii/S1359645401002877},
+	doi = {10.1016/S1359-6454(01)00287-7},
+	abstract = {A combined theoretical and experimental approach has been used to study nanoscale {CoFe}/Cu/{CoFe} multilayer films grown by sputter deposition. Such films have applications in sensors that utilize the giant magnetoresistance effect, for example, read heads in high-density information storage devices. Atomistic simulations based on a molecular dynamics approach and an alloy form of the embedded atom method have been developed to accurately model the sputter deposition of the {CoFe}/Cu/{CoFe} multilayers. The simulations show that relatively flat interfaces are formed because of the energetic deposition conditions. However, significant intermixing at the {CoFe}-on-Cu interface, but not at the Cu-on-{CoFe} interface, was observed. An abnormal Fe depletion zone is also revealed at the {CoFe}-on-Cu interface. A three-dimensional atom probe method has been used for a nanoscale chemical analysis of the films. It provided direct verification of the simulations. The simulations have then been used to understand the mechanism responsible for the formation of the intermixing defects observed in the multilayers. A novel deposition technique is proposed which reduces both interfacial mixing and Fe depletion by controlling the incident adatom energies.},
+	number = {19},
+	urldate = {2014-10-16},
+	journal = {Acta Materialia},
+	author = {Zhou, X. W. and Wadley, H. N. G. and Johnson, R. A. and Larson, D. J. and Tabat, N. and Cerezo, A. and Petford-Long, A. K. and Smith, G. D. W. and Clifton, P. H. and Martens, R. L. and Kelly, T. F.},
+	month = nov,
+	year = {2001},
+	keywords = {Atom probe, Magnetoresistive effects, Molecular dynamics, Multilayers, Surfaces \& interfaces},
+	pages = {4005--4015},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2QNS36PP/Zhou et al. - 2001 - Atomic scale structure of sputtered metal multilay.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/BZ7T6VDE/S1359645401002877.html:text/html}
 }
 
 @article{cammarata_nanoindentation_1990,
@@ -899,6 +935,23 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	keywords = {Characterization and Evaluation of Materials, Condensed Matter Physics, Nanotechnology, Operating Procedures, Materials Treatment, Optical and Electronic Materials, Surfaces and Interfaces, Thin Films},
 	pages = {747--751},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5A3PJC4P/Švorčík et al. - 2011 - Annealing of sputtered gold nano-structures.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/37T96ZKN/s00339-010-5977-5.html:text/html}
+}
+
+@article{onat_optimized_2014,
+	title = {An optimized interatomic potential for Cu–Ni alloys with the embedded-atom method},
+	volume = {26},
+	issn = {0953-8984},
+	url = {http://iopscience.iop.org/0953-8984/26/3/035404},
+	doi = {10.1088/0953-8984/26/3/035404},
+	abstract = {We have developed a semi-empirical and many-body type model potential using a modified charge density profile for Cu–Ni alloys based on the embedded-atom method ({EAM}) formalism with an improved optimization technique. The potential is determined by fitting to experimental and first-principles data for Cu, Ni and Cu–Ni binary compounds, such as lattice constants, cohesive energies, bulk modulus, elastic constants, diatomic bond lengths and bond energies. The generated potentials were tested by computing a variety of properties of pure elements and the alloy of Cu, Ni: the melting points, alloy mixing enthalpy, lattice specific heat, equilibrium lattice structures, vacancy formation and interstitial formation energies, and various diffusion barriers on the (100) and (111) surfaces of Cu and Ni.},
+	number = {3},
+	urldate = {2014-11-21},
+	journal = {Journal of Physics: Condensed Matter},
+	author = {Onat, Berk and Durukanoğlu, Sondan},
+	month = jan,
+	year = {2014},
+	pages = {035404},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/I2NM4FP2/Onat and Durukanoğlu - 2014 - An optimized interatomic potential for Cu–Ni alloy.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/7CCAZFWI/035404\;jsessionid=A3F65F8E6B563EE591792EDB7FF3C80A.html:text/html}
 }
 
 @article{liu_melting_2001,
