--- a/settings.tex
+++ b/settings.tex
@@ -82,3 +82,5 @@
 
 \newcommand{\qqquad}[0]{\qquad\quad}
 \newcommand{\pot}[1]{\texttt{#1}}
+
+\newcommand{\Si}[2]{\todo{Tippfehler: \\Si statt \\SI}\SI{#1}{#2}}
